--- a/ProjetoOneBit/index.html
+++ b/ProjetoOneBit/index.html
@@ -105,5 +105,6 @@
     <div id="copyright">
         Desenvolvido por <a href="https://github.com/HudeMoura" target="_blank">Felipe Moura</a>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
